<resources>
    <string name="app_name">V9Porn</string>

    <string name="coming_soon">敬请期待&#8230;</string>
    <string name="hot">当前最热</string>
    <string name="recent_updates">最近更新</string>
    <string name="index">主页</string>
    <string name="near_rp">最近得分</string>
    <string name="ten_minutes">10分钟以上</string>
    <string name="this_month">本月讨论</string>
    <string name="this_month_collect">本月收藏</string>
    <string name="most_collect">收藏最多</string>
    <string name="near_score">最近加精</string>
    <string name="this_month_hot">本月最热</string>
    <string name="last_month_hot">上月最热</string>
    <string name="hd_video">高清(会员)</string>
    <string name="load_failed">加载失败，点击重试..</string>
    <string name="other">其他</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_download">我的下载</string>
    <string name="more_setting">更多设置</string>
    <string name="about_me">关于</string>
    <string name="pl_login">请登录</string>
    <string name="no_data">暂无数据</string>
    <string name="collect">收藏</string>
    <string name="download">下载</string>
    <string name="history_views">最近浏览</string>
    <string name="register">注册</string>
    <string name="exit_app">退出程序</string>
    <string name="share">分享</string>
    <string name="close">关闭</string>
    <string name="comments">评论</string>
    <string name="scale_down_show_behavior">com.u9porn.behavior.ScaleDownShowBehavior</string>
    <string name="bottom_behavior">com.u9porn.behavior.BottomBehavior</string>
    <string name="comment_video_hint_tip">切勿回复与视频无关内容，否则禁言</string>
    <string name="about_item_homepage">去GitHub提建议或者Bug反馈</string>
    <string name="about_item_github">GitHub 项目</string>
    <string name="about_copyright">© %1$s TechGay 91PORN All rights reserved.</string>
    <string name="about_check_update">检查更新</string>
    <string name="playback_engine">播放引擎</string>
    <string name="address_v9porn">设置V9视频地址</string>
    <string name="address_forum_9porn">设置F9论坛地址</string>
    <string name="address_t6y">设置cl地址</string>
    <string name="address_pa">设置zgl视频地址</string>
    <string name="about_item_clean_cache">清除缓存</string>
    <string name="proxy_setting">HTTP代理</string>
    <string name="night_mode">夜间模式</string>
    <string name="point">.</string>


    <string name="title_video">视频</string>
    <string name="title_dashboard">草榴</string>
    <string name="title_forum">论坛</string>
    <string name="title_music">音乐</string>
    <string name="title_photo">图片</string>
    <string name="title_me">我的</string>
    <string name="exit_login_account">退出登录</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_proxy_setting">HTTP代理设置</string>
    <string name="done">完成</string>
    <string name="tip_proxy_setting">Tip：这个设置只是HTTP代理设置，仅代理网页请求(百度免费HTTP代理即可,但可用性一般很低很低)，并不会提高你观看视频的速度，只为解决部分用户观看次数超限问题，如果你的观看次数不受影响，最好不要设置。</string>
    <string name="port">端口号(port)</string>
    <string name="test">测试</string>
    <string name="clean">清空</string>
    <string name="delete">删除</string>
    <string name="title_user_login">用户登录（仅本次有效）</string>
    <string name="title_user_register">用户注册</string>
    <string name="title_author_video">用户视频</string>
    <string name="title_setting">设置</string>
    <string name="forum_content">帖子内容</string>
    <string name="dialog_title_system_msg">系统弹出提示框</string>
    <string name="photo">看图</string>
    <string name="pav">Pav</string>
    <string name="back">返回</string>
    <string name="sure">确定</string>
    <string name="author">作者：</string>
    <string name="send_icon">sendIcon</string>
</resources>
